Disable functional tests
rename the functional env to functional-mcp so that the job does
not find the functional test env in tox config.

These tests require OpenDaylight controller installed on board
which we do not have, and attempt to run this job is just
needlessly consumes resources and time.

Change-Id: I20cb02e7ee4800e4c84880cc32911bc80b4949d7
Closes-Bug: PROD-25720

--- a/tox.ini
+++ b/tox.ini
@@ -25,7 +25,7 @@ setenv = OS_SUDO_TESTING=1
          OS_LOG_PATH={env:OS_LOG_PATH:/opt/stack/logs}
 commands = false
 
-[testenv:functional]
+[testenv:functional-mcp]
 setenv = {[testenv]setenv}
          OS_TEST_PATH=./networking_odl/tests/functional
 deps = {[testenv]deps}
@@ -33,10 +33,10 @@ deps = {[testenv]deps}
 
 [testenv:dsvm-functional]
 basepython = python2.7
-setenv = {[testenv:functional]setenv}
+setenv = {[testenv:functional-mcp]setenv}
          {[testenv:dsvm]setenv}
 deps =
-    {[testenv:functional]deps}
+    {[testenv:functional-mcp]deps}
 
 [testenv:fullstack]
 setenv = {[testenv]setenv}
